{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 51,
  "lineage": "f647b5db-2783-dc8a-1b08-4d72b75a5129",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "monitoring-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:loadbalancer/app/monitoring-app/f4dbaba28c72c8bc",
            "arn_suffix": "app/monitoring-app/f4dbaba28c72c8bc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "monitoring-app-1175423847.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:loadbalancer/app/monitoring-app/f4dbaba28c72c8bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "monitoring-app",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0299c42bc89bf8bb6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-005acbfdd0aa7ecac"
              },
              {
                "subnet_id": "subnet-0218c046651cff784"
              },
              {
                "subnet_id": "subnet-03746b2129f87b33b"
              }
            ],
            "subnets": [
              "subnet-005acbfdd0aa7ecac",
              "subnet-0218c046651cff784",
              "subnet-03746b2129f87b33b"
            ],
            "tags": {
              "Name": "monitoring-app"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "monitoring-app",
              "Project_name": "Monitoring-App"
            },
            "vpc_id": "vpc-0a33ca42de6280a66",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.monitoring-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "monitoring-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:listener/app/monitoring-app/f4dbaba28c72c8bc/4079332e03209008",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:targetgroup/monitoring-app/c5193514679eb6c5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:listener/app/monitoring-app/f4dbaba28c72c8bc/4079332e03209008",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:loadbalancer/app/monitoring-app/f4dbaba28c72c8bc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "Development",
              "Project_name": "Monitoring-App"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.monitoring-app",
            "aws_lb_target_group.monitoring-app",
            "aws_security_group.monitoring-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "monitoring-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:targetgroup/monitoring-app/c5193514679eb6c5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:listener-rule/app/monitoring-app/f4dbaba28c72c8bc/4079332e03209008/0e74a76391e9ea6d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:listener-rule/app/monitoring-app/f4dbaba28c72c8bc/4079332e03209008/0e74a76391e9ea6d",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:listener/app/monitoring-app/f4dbaba28c72c8bc/4079332e03209008",
            "priority": 1,
            "tags": null,
            "tags_all": {
              "Environment": "Development",
              "Project_name": "Monitoring-App"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.monitoring-app",
            "aws_lb_listener.monitoring-app",
            "aws_lb_target_group.monitoring-app",
            "aws_security_group.monitoring-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "monitoring-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:targetgroup/monitoring-app/c5193514679eb6c5",
            "arn_suffix": "targetgroup/monitoring-app/c5193514679eb6c5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:597849092155:targetgroup/monitoring-app/c5193514679eb6c5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "monitoring-app",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Development",
              "Project_name": "Monitoring-App"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a33ca42de6280a66"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:597849092155:security-group/sg-0299c42bc89bf8bb6",
            "description": "Allow inbound traffic to flask app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0299c42bc89bf8bb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "monitoring-app",
            "name_prefix": "",
            "owner_id": "597849092155",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "Development",
              "Project_name": "Monitoring-App"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a33ca42de6280a66"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}